# mylis

./: IDEAS.md  README.md  pyproject.toml
notebooks/: examples.ipynb  exemplos.ipynb  magic-demo.ipynb  turtle.ipynb
src/mylis/: environ.py  evaluator.py  mylis.py  mytypes.py  parser.py  symbol.py
tests/: environ_test.py  evaluator_test.py  mylis_test.py  parser_test.py
